MDEV-12188 information schema - errors populating fail to free memory, unlock mutexes

InnoDB: cleanup if filling an information_schema table fals.