storage/innobase/handler/i_s.cc
@@ -141,7 +141,7 @@ struct buf_page_info_t{
 
 #define OK(expr)		\
 	if ((expr) != 0) {	\
-		DBUG_RETURN(1);	\
+		goto done;   \
 	}
 
 #define RETURN_IF_INNODB_NOT_STARTED(plugin_name)			\
@@ -591,6 +591,7 @@ fill_innodb_trx_from_cache(
 	ulint	rows_num;
 	char	lock_id[TRX_I_S_LOCK_ID_MAX_LEN + 1];
 	ulint	i;
+	int	ret = 1;
 
 	DBUG_ENTER("fill_innodb_trx_from_cache");
 
@@ -730,7 +731,9 @@ fill_innodb_trx_from_cache(
 		OK(schema_table_store_record(thd, table));
 	}
 
-	DBUG_RETURN(0);
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 
 /*******************************************************************//**
@@ -921,6 +924,7 @@ fill_innodb_locks_from_cache(
 	ulint	rows_num;
 	char	lock_id[TRX_I_S_LOCK_ID_MAX_LEN + 1];
 	ulint	i;
+	int	ret = 1;
 
 	DBUG_ENTER("fill_innodb_locks_from_cache");
 
@@ -995,7 +999,9 @@ fill_innodb_locks_from_cache(
 		OK(schema_table_store_record(thd, table));
 	}
 
-	DBUG_RETURN(0);
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 
 /*******************************************************************//**
@@ -1128,6 +1134,7 @@ fill_innodb_lock_waits_from_cache(
 	char	requested_lock_id[TRX_I_S_LOCK_ID_MAX_LEN + 1];
 	char	blocking_lock_id[TRX_I_S_LOCK_ID_MAX_LEN + 1];
 	ulint	i;
+	int	ret = 1;
 
 	DBUG_ENTER("fill_innodb_lock_waits_from_cache");
 
@@ -1178,7 +1185,9 @@ fill_innodb_lock_waits_from_cache(
 		OK(schema_table_store_record(thd, table));
 	}
 
-	DBUG_RETURN(0);
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 
 /*******************************************************************//**
@@ -2455,6 +2464,7 @@ i_s_metrics_fill(
 	monitor_info_t*	monitor_info;
 	mon_type_t	min_val;
 	mon_type_t	max_val;
+	int		ret = 1;
 
 	DBUG_ENTER("i_s_metrics_fill");
 	fields = table_to_fill->field;
@@ -2709,7 +2719,9 @@ i_s_metrics_fill(
 		OK(schema_table_store_record(thd, table_to_fill));
 	}
 
-	DBUG_RETURN(0);
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 
 /*******************************************************************//**
@@ -2832,6 +2844,7 @@ i_s_stopword_fill(
 	Field**	fields;
 	ulint	i = 0;
 	TABLE*	table = (TABLE*) tables->table;
+	int	ret = 1;
 
 	DBUG_ENTER("i_s_stopword_fill");
 
@@ -2847,7 +2860,9 @@ i_s_stopword_fill(
 		i++;
 	}
 
-	DBUG_RETURN(0);
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 
 /*******************************************************************//**
@@ -2951,6 +2966,7 @@ i_s_fts_deleted_generic_fill(
 	fts_table_t		fts_table;
 	fts_doc_ids_t*		deleted;
 	dict_table_t*		user_table;
+	int			ret = 1;
 
 	DBUG_ENTER("i_s_fts_deleted_generic_fill");
 
@@ -3004,6 +3020,8 @@ i_s_fts_deleted_generic_fill(
 		OK(schema_table_store_record(thd, table));
 	}
 
+	ret = 0;
+done:
 	trx_free_for_background(trx);
 
 	fts_doc_ids_free(deleted);
@@ -3012,7 +3030,7 @@ i_s_fts_deleted_generic_fill(
 
 	rw_lock_s_unlock(&dict_operation_lock);
 
-	DBUG_RETURN(0);
+	DBUG_RETURN(ret);
 }
 
 /*******************************************************************//**
@@ -3261,6 +3279,7 @@ i_s_fts_index_cache_fill_one_index(
 	fts_string_t		conv_str;
 	uint			dummy_errors;
 	char*			word_str;
+	int			ret = 1;
 
 	DBUG_ENTER("i_s_fts_index_cache_fill_one_index");
 
@@ -3349,9 +3368,11 @@ i_s_fts_index_cache_fill_one_index(
 		}
 	}
 
+	ret = 0;
+done:
 	ut_free(conv_str.f_str);
 
-	DBUG_RETURN(0);
+	DBUG_RETURN(ret);
 }
 /*******************************************************************//**
 Fill the dynamic table INFORMATION_SCHEMA.INNODB_FT_INDEX_CACHED
@@ -3620,7 +3641,7 @@ i_s_fts_index_table_fill_one_fetch(
 	uint			dummy_errors;
 	char*			word_str;
 	ulint			words_size;
-	int			ret = 0;
+	int			ret = 1;
 
 	DBUG_ENTER("i_s_fts_index_table_fill_one_fetch");
 
@@ -3710,6 +3731,8 @@ i_s_fts_index_table_fill_one_fetch(
 		}
 	}
 
+	ret = 0;
+done:
 	i_s_fts_index_table_free_one_fetch(words);
 
 	DBUG_RETURN(ret);
@@ -3969,6 +3992,7 @@ i_s_fts_config_fill(
 	ulint			i = 0;
 	dict_index_t*		index = NULL;
 	unsigned char		str[FTS_MAX_CONFIG_VALUE_LEN + 1];
+	int			ret = 1;
 
 	DBUG_ENTER("i_s_fts_config_fill");
 
@@ -4049,6 +4073,8 @@ i_s_fts_config_fill(
 		i++;
 	}
 
+	ret = 0;
+done:
 	fts_sql_commit(trx);
 
 	trx_free_for_background(trx);
@@ -4057,7 +4083,7 @@ i_s_fts_config_fill(
 
 	rw_lock_s_unlock(&dict_operation_lock);
 
-	DBUG_RETURN(0);
+	DBUG_RETURN(ret);
 }
 
 /*******************************************************************//**
@@ -4436,6 +4462,7 @@ i_s_innodb_stats_fill(
 {
 	TABLE*			table;
 	Field**			fields;
+	int			ret = 1;
 
 	DBUG_ENTER("i_s_innodb_stats_fill");
 
@@ -4551,7 +4578,11 @@ i_s_innodb_stats_fill(
 	OK(fields[IDX_BUF_STATS_UNZIP_CUR]->store(
 		static_cast<double>(info->unzip_cur)));
 
-	DBUG_RETURN(schema_table_store_record(thd, table));
+	OK(schema_table_store_record(thd, table));
+
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 
 /*******************************************************************//**
@@ -4875,6 +4906,7 @@ i_s_innodb_buffer_page_fill(
 {
 	TABLE*			table;
 	Field**			fields;
+	int			ret = 1;
 
 	DBUG_ENTER("i_s_innodb_buffer_page_fill");
 
@@ -5043,7 +5075,9 @@ i_s_innodb_buffer_page_fill(
 		}
 	}
 
-	DBUG_RETURN(0);
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 
 /*******************************************************************//**
@@ -5587,6 +5621,7 @@ i_s_innodb_buf_page_lru_fill(
 	TABLE*			table;
 	Field**			fields;
 	mem_heap_t*		heap;
+	int			ret = 1;
 
 	DBUG_ENTER("i_s_innodb_buf_page_lru_fill");
 
@@ -5746,9 +5781,11 @@ i_s_innodb_buf_page_lru_fill(
 		mem_heap_empty(heap);
 	}
 
+	ret = 0;
+done:
 	mem_heap_free(heap);
 
-	DBUG_RETURN(0);
+	DBUG_RETURN(ret);
 }
 
 /*******************************************************************//**
@@ -6044,6 +6081,7 @@ i_s_dict_fill_sys_tables(
 	ulint	zip_size	= dict_tf_get_zip_size(table->flags);
 	const char* file_format;
 	const char* row_format;
+	int	ret = 1;
 
 	file_format = trx_sys_file_format_id_to_name(atomic_blobs);
 	if (!compact) {
@@ -6079,7 +6117,9 @@ i_s_dict_fill_sys_tables(
 
 	OK(schema_table_store_record(thd, table_to_fill));
 
-	DBUG_RETURN(0);
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 /*******************************************************************//**
 Function to go through each record in SYS_TABLES table, and fill the
@@ -6326,6 +6366,7 @@ i_s_dict_fill_sys_tablestats(
 	TABLE*		table_to_fill)	/*!< in/out: fill this table */
 {
 	Field**		fields;
+	int		ret = 1;
 
 	DBUG_ENTER("i_s_dict_fill_sys_tablestats");
 
@@ -6374,7 +6415,9 @@ i_s_dict_fill_sys_tablestats(
 
 	OK(schema_table_store_record(thd, table_to_fill));
 
-	DBUG_RETURN(0);
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 
 /*******************************************************************//**
@@ -6600,6 +6643,7 @@ i_s_dict_fill_sys_indexes(
 	TABLE*		table_to_fill)	/*!< in/out: fill this table */
 {
 	Field**		fields;
+	int		ret = 1;
 
 	DBUG_ENTER("i_s_dict_fill_sys_indexes");
 
@@ -6626,7 +6670,9 @@ i_s_dict_fill_sys_indexes(
 
 	OK(schema_table_store_record(thd, table_to_fill));
 
-	DBUG_RETURN(0);
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 /*******************************************************************//**
 Function to go through each record in SYS_INDEXES table, and fill the
@@ -6844,6 +6890,7 @@ i_s_dict_fill_sys_columns(
 	TABLE*		table_to_fill)	/*!< in/out: fill this table */
 {
 	Field**		fields;
+	int		ret = 1;
 
 	DBUG_ENTER("i_s_dict_fill_sys_columns");
 
@@ -6863,7 +6910,9 @@ i_s_dict_fill_sys_columns(
 
 	OK(schema_table_store_record(thd, table_to_fill));
 
-	DBUG_RETURN(0);
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 /*******************************************************************//**
 Function to fill information_schema.innodb_sys_columns with information
@@ -7053,6 +7102,7 @@ i_s_dict_fill_sys_fields(
 	TABLE*		table_to_fill)	/*!< in/out: fill this table */
 {
 	Field**		fields;
+	int		ret = 1;
 
 	DBUG_ENTER("i_s_dict_fill_sys_fields");
 
@@ -7066,7 +7116,9 @@ i_s_dict_fill_sys_fields(
 
 	OK(schema_table_store_record(thd, table_to_fill));
 
-	DBUG_RETURN(0);
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 /*******************************************************************//**
 Function to go through each record in SYS_FIELDS table, and fill the
@@ -7279,6 +7331,7 @@ i_s_dict_fill_sys_foreign(
 	TABLE*		table_to_fill)	/*!< in/out: fill this table */
 {
 	Field**		fields;
+	int		ret = 1;
 
 	DBUG_ENTER("i_s_dict_fill_sys_foreign");
 
@@ -7298,7 +7351,9 @@ i_s_dict_fill_sys_foreign(
 
 	OK(schema_table_store_record(thd, table_to_fill));
 
-	DBUG_RETURN(0);
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 
 /*******************************************************************//**
@@ -7499,6 +7554,7 @@ i_s_dict_fill_sys_foreign_cols(
 	TABLE*		table_to_fill)	/*!< in/out: fill this table */
 {
 	Field**		fields;
+	int		ret = 1;
 
 	DBUG_ENTER("i_s_dict_fill_sys_foreign_cols");
 
@@ -7514,7 +7570,9 @@ i_s_dict_fill_sys_foreign_cols(
 
 	OK(schema_table_store_record(thd, table_to_fill));
 
-	DBUG_RETURN(0);
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 /*******************************************************************//**
 Function to populate INFORMATION_SCHEMA.innodb_sys_foreign_cols table. Loop
@@ -7747,6 +7805,7 @@ i_s_dict_fill_sys_tablespaces(
 	ulint	zip_size	= fsp_flags_get_zip_size(flags);
 	const char* file_format;
 	const char* row_format;
+	int	ret = 1;
 
 	DBUG_ENTER("i_s_dict_fill_sys_tablespaces");
 
@@ -7783,7 +7842,9 @@ i_s_dict_fill_sys_tablespaces(
 
 	OK(schema_table_store_record(thd, table_to_fill));
 
-	DBUG_RETURN(0);
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 /*******************************************************************//**
 Function to populate INFORMATION_SCHEMA.INNODB_SYS_TABLESPACES table.
@@ -7963,6 +8024,7 @@ i_s_dict_fill_sys_datafiles(
 	TABLE*		table_to_fill)	/*!< in/out: fill this table */
 {
 	Field**		fields;
+	int		ret = 1;
 
 	DBUG_ENTER("i_s_dict_fill_sys_datafiles");
 
@@ -7974,7 +8036,9 @@ i_s_dict_fill_sys_datafiles(
 
 	OK(schema_table_store_record(thd, table_to_fill));
 
-	DBUG_RETURN(0);
+	ret = 0;
+done:
+	DBUG_RETURN(ret);
 }
 /*******************************************************************//**
 Function to populate INFORMATION_SCHEMA.INNODB_SYS_DATAFILES table.
